--- a/.github/workflows/deploy-workers.yml
+++ b/.github/workflows/deploy-workers.yml
@@ -28,6 +28,8 @@ jobs:
       env:
         WX_APPID: ${{ secrets.WX_APPID }}
         WX_APPSECRET: ${{ secrets.WX_APPSECRET }}
+        GIST_TOKEN: ${{ GIST_TOKEN }}
+        GIST_ID: ${{ GIST_ID }}
       run: |
         envsubst < src/secrets.ts > src/secrets_replaced.ts
         mv src/secrets_replaced.ts src/secrets.ts
