--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT OR Apache-2.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^1.0.1",
+    "@octokit/rest": "^17.6.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
@@ -26,7 +27,7 @@
     "source-map-support": "^0.5.12",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
-    "webpack": "^4.35.3",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.6"
   }
 }
